Left align equations (fleqn)

--- a/Vorlage.tex
+++ b/Vorlage.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[fleqn]{article}
 \usepackage[ngerman]{babel} % (new)german hyphenation support
 \usepackage[utf8]{inputenc} % unicode support
 \usepackage{fullpage} % smaller page margins
